--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,7 +7,7 @@ on:
 env:
   TEST: test
   TEST2: test2
-  USER: PiotrWandycz
+  USER: piotrwandycz
   REPO: training_githubactions_start
 jobs:
   build:
